2008-08-24  Mirco Bauer <meebey@meebey.net> 

	* IrcGroupChatView.cs: Use LibraryCatalog now.

2008-07-27  Mirco Bauer <meebey@meebey.net> 

	* AssemblyInfo.cs, AssemblyInfo.cs.in: Removed AssemblyInfo.cs.in files, not
	  needed anymore as we use a shared AssemblyVersion.cs(.in) now.

2008-07-27  Mirco Bauer <meebey@meebey.net> 

	* IrcGroupChatView.cs: Added whois to popup menu. (closes trac bug #57)

2008-07-27  Mirco Bauer <meebey@meebey.net> 

	* IrcGroupChatView.cs: Implemented Kick + Ban in popup menu. (closes trac
	  bug #58)

2008-07-27  Mirco Bauer <meebey@meebey.net> 

	* IrcGroupChatView.cs: Implemented selecting multiple person in a group
	  chat. (closes trac bug #73)
	
	  Refactored person context menu commands to support a list of persons.

2008-07-27  Mirco Bauer <meebey@meebey.net> 

	* Frontend-GNOME-IRC.mdp: Removed assembly attributes that are now part of
	  the shared AssemblyVersion.cs file.

2008-07-17  Mirco Bauer <meebey@meebey.net> 

	* AssemblyInfo.cs: Bumped version to 0.6.0.

2008-07-17  Mirco Bauer <meebey@meebey.net> 

	

2008-07-17  Mirco Bauer <meebey@meebey.net> 

	* IrcGroupChatView.cs: Fixed sort order of op + voice, should be above voice
	  not below.

2008-07-16  Mirco Bauer <meebey@meebey.net> 

	* IrcGroupChatView.cs: Added devider to person popup menu.

2008-06-02  Mirco Bauer <meebey@meebey.net> 

	* IrcPersonChatView.cs, IrcGroupChatView.cs, Frontend-GNOME-IRC.mdp:
	  Refactored tab menu code.
	
	  Moved tab popup menu to ChatView.
	
	  Implemented closing tabs using the middle-mouse button.

2008-04-01  Mirco Bauer <meebey@meebey.net> 

	* AssemblyInfo.cs: Bumped version to 0.5.31
	* Frontend-GNOME-IRC.mdp: Reference GTK# 2.8 / GNOME# 2.8.

2008-04-01  Mirco Bauer <meebey@meebey.net> 

	* IrcGroupChatView.cs: Fixed whitespace.

2008-01-31  Mirco Bauer <meebey@meebey.net> 

	* AssemblyInfo.cs: Bumped version to 0.5.30.

2007-12-25  Mirco Bauer <meebey@meebey.net> 
