@@ -91,8 +91,7 @@ DATA_FILES =
 
 RESOURCES = 
 
-EXTRAS = \
-	smuxi-frontend-gnome-xmpp.pc.in 
+EXTRAS = 
 
 REFERENCES = 
 
@@ -102,7 +101,6 @@ CLEANFILES = $(PROGRAMFILES) $(LINUX_PKGCONFIG)
 
 include $(top_srcdir)/Makefile.include
 
-FRONTEND_GNOME_XMPP_PC = $(BUILD_DIR)/smuxi-frontend-gnome-xmpp.pc
 SMUXI_COMMON_DLL = $(BUILD_DIR)/smuxi-common.dll
 SMUXI_ENGINE_XMPP_DLL = $(BUILD_DIR)/smuxi-engine-xmpp.dll
 SMUXI_FRONTEND_DLL = $(BUILD_DIR)/smuxi-frontend.dll
@@ -112,7 +110,6 @@ LOG4NET_DLL = $(BUILD_DIR)/log4net.dll
 SMUXI_ENGINE_DLL = $(BUILD_DIR)/smuxi-engine.dll
 JABBER_NET_DLL = $(BUILD_DIR)/jabber-net.dll
 
-$(eval $(call emit-deploy-wrapper,FRONTEND_GNOME_XMPP_PC,smuxi-frontend-gnome-xmpp.pc))
 $(eval $(call emit-deploy-target,SMUXI_COMMON_DLL))
 $(eval $(call emit-deploy-target,SMUXI_ENGINE_XMPP_DLL_MDB))
 $(eval $(call emit-deploy-target,SMUXI_ENGINE_XMPP_DLL))
