@@ -1,6 +1,0 @@
-Name: Frontend-GNOME-XMPP
-Description: Frontend-GNOME-XMPP
-Version: @VERSION@
-
-Requires: smuxi-engine smuxi-engine-xmpp
-Libs: -r:@expanded_libdir@/@PACKAGE@/smuxi-frontend-gnome-xmpp.dll
