@@ -127,7 +127,6 @@ RESOURCES = \
 
 EXTRAS = \
 	smuxi-frontend-gnome.in \
-	smuxi-frontend-gnome.pc.in \
 	$(FRONTEND_GNOME_EXE_CONFIG_SOURCE)
 
 REFERENCES =  \
@@ -150,12 +149,10 @@ include $(top_srcdir)/Makefile.include
 SMUXI_ENGINE_DLL = $(BUILD_DIR)/smuxi-engine.dll
 FRONTEND_GNOME = $(BUILD_DIR)/smuxi-frontend-gnome
 FRONTEND_GNOME_DESKTOP = $(BUILD_DIR)/smuxi-frontend-gnome.desktop
-FRONTEND_GNOME_PC = $(BUILD_DIR)/smuxi-frontend-gnome.pc
 SMUXI_FRONTEND_DLL = $(BUILD_DIR)/smuxi-frontend.dll
 SMUXI_COMMON_DLL = $(BUILD_DIR)/smuxi-common.dll
 
 $(eval $(call emit-deploy-wrapper,FRONTEND_GNOME,smuxi-frontend-gnome,x))
-$(eval $(call emit-deploy-wrapper,FRONTEND_GNOME_PC,smuxi-frontend-gnome.pc))
 $(eval $(call emit-deploy-target,FRONTEND_GNOME_DESKTOP))
 $(eval $(call emit-deploy-target,FRONTEND_GNOME_EXE_CONFIG))
 $(eval $(call emit-deploy-target,SMUXI_ENGINE_DLL_MDB))
